cfg.c
#line 1 "cfg.rl"
// Copyright 2018 Nicholas J. Kain <njkain at gmail dot com>
// SPDX-License-Identifier: MIT
#include <stdio.h>
#include <sys/types.h>
#include <sys/stat.h>
#include <fcntl.h>
#include <stdlib.h>
#include <string.h>
#include <limits.h>
#include "ndhc-defines.h"
#include "cfg.h"
#include "arp.h"
#include "ndhc.h"
#include "ifchd.h"
#include "sockd.h"
#include "nk/log.h"
#include "nk/privs.h"
#include "nk/io.h"

static void copy_cmdarg(char *dest, const char *src,
size_t destlen, const char *argname)
{
	if (!memccpy(dest, src, 0, destlen))
		suicide("snprintf failed on %s", argname);
}

struct cfgparse {
	char buf[MAX_BUF];
	size_t buflen;
	int ternary; // = 0 nothing, -1 = false, +1 = true
	int cs;
};


#line 173 "cfg.rl"



#line 222 "cfg.rl"



#line 45 "cfg.c"
static const int file_cfg_start = 1;
static const int file_cfg_first_final = 291;
static const int file_cfg_error = 0;

static const int file_cfg_en_main = 1;


#line 224 "cfg.rl"


static void parse_cfgfile(const char *fname)
{
	bool reached_eof = false;
	struct cfgparse ccfg;
	memset(&ccfg, 0, sizeof ccfg);
	char l[MAX_BUF];
	size_t lc = 0;
	memset(l, 0, sizeof l);
	int fd = open(fname, O_RDONLY|O_CLOEXEC, 0);
	if (fd < 0)
		suicide("Unable to open config file '%s'.", fname);
	
	size_t linenum = 0;
	for (;;) {
		if (lc + 1 >= sizeof l) suicide("sizeof l - 1 - lc would underflow");
			ssize_t rc = safe_read(fd, l + lc, sizeof l - 1 - lc);
		if (rc < 0)
			suicide("Error reading config file '%s'.", fname);
		if (rc == 0) {
			l[lc] = '\n'; rc = 1; reached_eof = true; // Emulate a LF to terminate the line.
		}
		lc += (size_t)rc;
		
		size_t lstart = 0, lend = 0, consumed = 0;
		for (; lend < lc; ++lend) {
			if (l[lend] == '\n') {
				++linenum; consumed = lend;
				
				size_t llen = lend - lstart;
				const char *p = l + lstart;
				const char *pe = l + lstart + llen + 1;
				
#line 88 "cfg.c"
				{
					ccfg.cs = (int)file_cfg_start;
				}
				
#line 257 "cfg.rl"
				
				
#line 96 "cfg.c"
				{
					switch ( ccfg.cs ) {
						case 1:
						goto st_case_1;
						case 0:
						goto st_case_0;
						case 291:
						goto st_case_291;
						case 2:
						goto st_case_2;
						case 3:
						goto st_case_3;
						case 4:
						goto st_case_4;
						case 5:
						goto st_case_5;
						case 6:
						goto st_case_6;
						case 7:
						goto st_case_7;
						case 8:
						goto st_case_8;
						case 9:
						goto st_case_9;
						case 10:
						goto st_case_10;
						case 11:
						goto st_case_11;
						case 12:
						goto st_case_12;
						case 13:
						goto st_case_13;
						case 14:
						goto st_case_14;
						case 15:
						goto st_case_15;
						case 16:
						goto st_case_16;
						case 17:
						goto st_case_17;
						case 18:
						goto st_case_18;
						case 19:
						goto st_case_19;
						case 20:
						goto st_case_20;
						case 21:
						goto st_case_21;
						case 22:
						goto st_case_22;
						case 23:
						goto st_case_23;
						case 24:
						goto st_case_24;
						case 25:
						goto st_case_25;
						case 26:
						goto st_case_26;
						case 27:
						goto st_case_27;
						case 28:
						goto st_case_28;
						case 29:
						goto st_case_29;
						case 30:
						goto st_case_30;
						case 31:
						goto st_case_31;
						case 32:
						goto st_case_32;
						case 33:
						goto st_case_33;
						case 34:
						goto st_case_34;
						case 35:
						goto st_case_35;
						case 36:
						goto st_case_36;
						case 37:
						goto st_case_37;
						case 38:
						goto st_case_38;
						case 39:
						goto st_case_39;
						case 40:
						goto st_case_40;
						case 41:
						goto st_case_41;
						case 42:
						goto st_case_42;
						case 43:
						goto st_case_43;
						case 44:
						goto st_case_44;
						case 45:
						goto st_case_45;
						case 46:
						goto st_case_46;
						case 47:
						goto st_case_47;
						case 48:
						goto st_case_48;
						case 49:
						goto st_case_49;
						case 50:
						goto st_case_50;
						case 51:
						goto st_case_51;
						case 52:
						goto st_case_52;
						case 53:
						goto st_case_53;
						case 54:
						goto st_case_54;
						case 55:
						goto st_case_55;
						case 56:
						goto st_case_56;
						case 57:
						goto st_case_57;
						case 58:
						goto st_case_58;
						case 59:
						goto st_case_59;
						case 60:
						goto st_case_60;
						case 61:
						goto st_case_61;
						case 62:
						goto st_case_62;
						case 63:
						goto st_case_63;
						case 64:
						goto st_case_64;
						case 65:
						goto st_case_65;
						case 66:
						goto st_case_66;
						case 67:
						goto st_case_67;
						case 68:
						goto st_case_68;
						case 69:
						goto st_case_69;
						case 70:
						goto st_case_70;
						case 71:
						goto st_case_71;
						case 72:
						goto st_case_72;
						case 73:
						goto st_case_73;
						case 74:
						goto st_case_74;
						case 75:
						goto st_case_75;
						case 76:
						goto st_case_76;
						case 77:
						goto st_case_77;
						case 78:
						goto st_case_78;
						case 79:
						goto st_case_79;
						case 80:
						goto st_case_80;
						case 81:
						goto st_case_81;
						case 82:
						goto st_case_82;
						case 83:
						goto st_case_83;
						case 84:
						goto st_case_84;
						case 85:
						goto st_case_85;
						case 86:
						goto st_case_86;
						case 87:
						goto st_case_87;
						case 88:
						goto st_case_88;
						case 89:
						goto st_case_89;
						case 90:
						goto st_case_90;
						case 91:
						goto st_case_91;
						case 92:
						goto st_case_92;
						case 93:
						goto st_case_93;
						case 94:
						goto st_case_94;
						case 95:
						goto st_case_95;
						case 96:
						goto st_case_96;
						case 97:
						goto st_case_97;
						case 98:
						goto st_case_98;
						case 99:
						goto st_case_99;
						case 100:
						goto st_case_100;
						case 101:
						goto st_case_101;
						case 102:
						goto st_case_102;
						case 103:
						goto st_case_103;
						case 104:
						goto st_case_104;
						case 105:
						goto st_case_105;
						case 106:
						goto st_case_106;
						case 107:
						goto st_case_107;
						case 108:
						goto st_case_108;
						case 109:
						goto st_case_109;
						case 110:
						goto st_case_110;
						case 111:
						goto st_case_111;
						case 112:
						goto st_case_112;
						case 113:
						goto st_case_113;
						case 114:
						goto st_case_114;
						case 115:
						goto st_case_115;
						case 116:
						goto st_case_116;
						case 117:
						goto st_case_117;
						case 118:
						goto st_case_118;
						case 119:
						goto st_case_119;
						case 120:
						goto st_case_120;
						case 121:
						goto st_case_121;
						case 122:
						goto st_case_122;
						case 123:
						goto st_case_123;
						case 124:
						goto st_case_124;
						case 125:
						goto st_case_125;
						case 126:
						goto st_case_126;
						case 127:
						goto st_case_127;
						case 128:
						goto st_case_128;
						case 129:
						goto st_case_129;
						case 130:
						goto st_case_130;
						case 131:
						goto st_case_131;
						case 132:
						goto st_case_132;
						case 133:
						goto st_case_133;
						case 134:
						goto st_case_134;
						case 135:
						goto st_case_135;
						case 136:
						goto st_case_136;
						case 137:
						goto st_case_137;
						case 138:
						goto st_case_138;
						case 139:
						goto st_case_139;
						case 140:
						goto st_case_140;
						case 141:
						goto st_case_141;
						case 142:
						goto st_case_142;
						case 143:
						goto st_case_143;
						case 144:
						goto st_case_144;
						case 145:
						goto st_case_145;
						case 146:
						goto st_case_146;
						case 147:
						goto st_case_147;
						case 148:
						goto st_case_148;
						case 149:
						goto st_case_149;
						case 150:
						goto st_case_150;
						case 151:
						goto st_case_151;
						case 152:
						goto st_case_152;
						case 153:
						goto st_case_153;
						case 154:
						goto st_case_154;
						case 155:
						goto st_case_155;
						case 156:
						goto st_case_156;
						case 157:
						goto st_case_157;
						case 158:
						goto st_case_158;
						case 159:
						goto st_case_159;
						case 160:
						goto st_case_160;
						case 161:
						goto st_case_161;
						case 162:
						goto st_case_162;
						case 163:
						goto st_case_163;
						case 164:
						goto st_case_164;
						case 165:
						goto st_case_165;
						case 166:
						goto st_case_166;
						case 167:
						goto st_case_167;
						case 168:
						goto st_case_168;
						case 169:
						goto st_case_169;
						case 170:
						goto st_case_170;
						case 171:
						goto st_case_171;
						case 172:
						goto st_case_172;
						case 173:
						goto st_case_173;
						case 174:
						goto st_case_174;
						case 175:
						goto st_case_175;
						case 176:
						goto st_case_176;
						case 177:
						goto st_case_177;
						case 178:
						goto st_case_178;
						case 179:
						goto st_case_179;
						case 180:
						goto st_case_180;
						case 181:
						goto st_case_181;
						case 182:
						goto st_case_182;
						case 183:
						goto st_case_183;
						case 184:
						goto st_case_184;
						case 185:
						goto st_case_185;
						case 186:
						goto st_case_186;
						case 187:
						goto st_case_187;
						case 188:
						goto st_case_188;
						case 189:
						goto st_case_189;
						case 190:
						goto st_case_190;
						case 191:
						goto st_case_191;
						case 192:
						goto st_case_192;
						case 193:
						goto st_case_193;
						case 194:
						goto st_case_194;
						case 195:
						goto st_case_195;
						case 196:
						goto st_case_196;
						case 197:
						goto st_case_197;
						case 198:
						goto st_case_198;
						case 199:
						goto st_case_199;
						case 200:
						goto st_case_200;
						case 201:
						goto st_case_201;
						case 202:
						goto st_case_202;
						case 203:
						goto st_case_203;
						case 204:
						goto st_case_204;
						case 205:
						goto st_case_205;
						case 206:
						goto st_case_206;
						case 207:
						goto st_case_207;
						case 208:
						goto st_case_208;
						case 209:
						goto st_case_209;
						case 210:
						goto st_case_210;
						case 211:
						goto st_case_211;
						case 212:
						goto st_case_212;
						case 213:
						goto st_case_213;
						case 214:
						goto st_case_214;
						case 215:
						goto st_case_215;
						case 216:
						goto st_case_216;
						case 217:
						goto st_case_217;
						case 218:
						goto st_case_218;
						case 219:
						goto st_case_219;
						case 220:
						goto st_case_220;
						case 221:
						goto st_case_221;
						case 222:
						goto st_case_222;
						case 223:
						goto st_case_223;
						case 224:
						goto st_case_224;
						case 225:
						goto st_case_225;
						case 226:
						goto st_case_226;
						case 227:
						goto st_case_227;
						case 228:
						goto st_case_228;
						case 229:
						goto st_case_229;
						case 230:
						goto st_case_230;
						case 231:
						goto st_case_231;
						case 232:
						goto st_case_232;
						case 233:
						goto st_case_233;
						case 234:
						goto st_case_234;
						case 235:
						goto st_case_235;
						case 236:
						goto st_case_236;
						case 237:
						goto st_case_237;
						case 238:
						goto st_case_238;
						case 239:
						goto st_case_239;
						case 240:
						goto st_case_240;
						case 241:
						goto st_case_241;
						case 242:
						goto st_case_242;
						case 243:
						goto st_case_243;
						case 244:
						goto st_case_244;
						case 245:
						goto st_case_245;
						case 246:
						goto st_case_246;
						case 247:
						goto st_case_247;
						case 248:
						goto st_case_248;
						case 249:
						goto st_case_249;
						case 250:
						goto st_case_250;
						case 251:
						goto st_case_251;
						case 252:
						goto st_case_252;
						case 253:
						goto st_case_253;
						case 254:
						goto st_case_254;
						case 255:
						goto st_case_255;
						case 256:
						goto st_case_256;
						case 257:
						goto st_case_257;
						case 258:
						goto st_case_258;
						case 259:
						goto st_case_259;
						case 260:
						goto st_case_260;
						case 261:
						goto st_case_261;
						case 262:
						goto st_case_262;
						case 263:
						goto st_case_263;
						case 264:
						goto st_case_264;
						case 265:
						goto st_case_265;
						case 266:
						goto st_case_266;
						case 267:
						goto st_case_267;
						case 268:
						goto st_case_268;
						case 269:
						goto st_case_269;
						case 270:
						goto st_case_270;
						case 271:
						goto st_case_271;
						case 272:
						goto st_case_272;
						case 273:
						goto st_case_273;
						case 274:
						goto st_case_274;
						case 275:
						goto st_case_275;
						case 276:
						goto st_case_276;
						case 277:
						goto st_case_277;
						case 278:
						goto st_case_278;
						case 279:
						goto st_case_279;
						case 280:
						goto st_case_280;
						case 281:
						goto st_case_281;
						case 282:
						goto st_case_282;
						case 283:
						goto st_case_283;
						case 284:
						goto st_case_284;
						case 285:
						goto st_case_285;
						case 286:
						goto st_case_286;
						case 287:
						goto st_case_287;
						case 288:
						goto st_case_288;
						case 289:
						goto st_case_289;
						case 290:
						goto st_case_290;
					}
					p+= 1;
					st_case_1:
					if ( p == pe )
						goto _out1;
					switch( ( (*( p))) ) {
						case 10: {
							goto _st291;
						}
						case 97: {
							goto _st2;
						}
						case 99: {
							goto _st36;
						}
						case 100: {
							goto _st55;
						}
						case 103: {
							goto _st82;
						}
						case 104: {
							goto _st94;
						}
						case 105: {
							goto _st105;
						}
						case 110: {
							goto _st128;
						}
						case 114: {
							goto _st141;
						}
						case 115: {
							goto _st201;
						}
						case 117: {
							goto _st273;
						}
						case 118: {
							goto _st280;
						}
					}
					goto _st0;
					_st0:
					st_case_0:
					goto _out0;
					_ctr34:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 738 "cfg.c"
					
					{
#line 129 "cfg.rl"
						
						int ti = atoi(ccfg.buf);
						if (ti >= 0) {
							unsigned t = (unsigned)ti;
							arp_probe_max = t;
							if (arp_probe_min > arp_probe_max) {
								t = arp_probe_max;
								arp_probe_max = arp_probe_min;
								arp_probe_min = t;
							}
						}
					}
					
#line 755 "cfg.c"
					
					goto _st291;
					_ctr42:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 766 "cfg.c"
					
					{
#line 117 "cfg.rl"
						
						int ti = atoi(ccfg.buf);
						if (ti >= 0) {
							unsigned t = (unsigned)ti;
							arp_probe_min = t;
							if (arp_probe_min > arp_probe_max) {
								t = arp_probe_max;
								arp_probe_max = arp_probe_min;
								arp_probe_min = t;
							}
						}
					}
					
#line 783 "cfg.c"
					
					goto _st291;
					_ctr51:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 794 "cfg.c"
					
					{
#line 112 "cfg.rl"
						
						int t = atoi(ccfg.buf);
						if (t >= 0)
						arp_probe_num = (unsigned)t;
					}
					
#line 804 "cfg.c"
					
					goto _st291;
					_ctr61:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 815 "cfg.c"
					
					{
#line 107 "cfg.rl"
						
						int t = atoi(ccfg.buf);
						if (t >= 0)
						arp_probe_wait = (unsigned)t;
					}
					
#line 825 "cfg.c"
					
					goto _st291;
					_ctr74:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 836 "cfg.c"
					
					{
#line 88 "cfg.rl"
						
						copy_cmdarg(chroot_dir, ccfg.buf, sizeof chroot_dir, "chroot");
					}
					
#line 844 "cfg.c"
					
					goto _st291;
					_ctr87:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 855 "cfg.c"
					
					{
#line 56 "cfg.rl"
						get_clientid_string(ccfg.buf, ccfg.buflen); }
					
#line 861 "cfg.c"
					
					goto _st291;
					_ctr110:
					{
#line 54 "cfg.rl"
						ccfg.ternary = -1; }
					
#line 869 "cfg.c"
					
					{
#line 156 "cfg.rl"
						
						switch (ccfg.ternary) {
							case 1: allow_hostname = 1; break;
							case -1: allow_hostname = 0; default: break;
						}
					}
					
#line 880 "cfg.c"
					
					goto _st291;
					_ctr111:
					{
#line 53 "cfg.rl"
						ccfg.ternary = 1; }
					
#line 888 "cfg.c"
					
					{
#line 156 "cfg.rl"
						
						switch (ccfg.ternary) {
							case 1: allow_hostname = 1; break;
							case -1: allow_hostname = 0; default: break;
						}
					}
					
#line 899 "cfg.c"
					
					goto _st291;
					_ctr130:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 910 "cfg.c"
					
					{
#line 141 "cfg.rl"
						
						char *q;
						long mt = strtol(ccfg.buf, &q, 10);
						if (q == ccfg.buf)
						suicide("gw-metric arg '%s' isn't a valid number", ccfg.buf);
						if (mt > INT_MAX)
						suicide("gw-metric arg '%s' is too large", ccfg.buf);
						if (mt < 0)
						mt = 0;
						client_config.metric = (int)mt;
					}
					
#line 926 "cfg.c"
					
					goto _st291;
					_ctr144:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 937 "cfg.c"
					
					{
#line 57 "cfg.rl"
						
						copy_cmdarg(client_config.hostname, ccfg.buf,
						sizeof client_config.hostname, "hostname");
					}
					
#line 946 "cfg.c"
					
					goto _st291;
					_ctr160:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 957 "cfg.c"
					
					{
#line 80 "cfg.rl"
						
						if (nk_uidgidbyname(ccfg.buf, &ifch_uid, &ifch_gid))
						suicide("invalid ifch user '%s' specified", ccfg.buf);
					}
					
#line 966 "cfg.c"
					
					goto _st291;
					_ctr174:
					{
#line 49 "cfg.rl"
						
						if (ccfg.buflen < sizeof ccfg.buf)
						ccfg.buf[ccfg.buflen] = 0;
					}
					
#line 977 "cfg.c"
					
					{
#line 61 "cfg.rl"
						
						copy_cmdarg(client_config.interface, ccfg.buf,
						sizeof client_config.interface, "interface");
					}
					
#line 986 "cfg.c"
					
					goto _st291;
					_ctr183:
					{
#line 54 "cfg.rl"
						ccfg.ternary = -1; }
					
#line 994 "cfg.c"
					
					{
#line 65 "cfg.rl"
						
						switch (ccfg.ternary) {
							case 1: client_config.abort_if_no_lease = true; break;
							case -1: client_config.abort_if_no_lease = false; default: break;
						}
					}
					
#line 1005 "cfg.c"
					
					goto _st291;
					_ctr184:
					{
#line 53 "cfg.rl"
